got option parsing and pointing at prod working

--- a/config/dev_errplane.conf
+++ b/config/dev_errplane.conf
@@ -1,3 +1,4 @@
 [DEFAULT]
-host: dev.errplane.com
-protocol: http://
+config-host: http://app.dev.errplane.com
+api-host: http://api.dev.errplane.com
+api-key: ignored
