--- a/config/prod_errplane.conf
+++ b/config/prod_errplane.conf
@@ -1,3 +1,5 @@
 [DEFAULT]
-host: errplane.com
-protocol: http://
+api-key: ignored
+config-host: http://app.errplane.com
+api-host: http://api.errplane.com
+
