--- a/samples/sample_config.json
+++ b/samples/sample_config.json
@@ -1,11 +1,2 @@
-{"object": 
-    {
-       "buffer_size": 10,
-       "Databases":
-       [
-               {
-               }
-               ]
-    }
 
-}
+{"configuration_interval":30,"created_at":"2012-05-30T20:51:43Z","id":1,"name":null,"organization_id":1,"server":"fasdsdfdasd","updated_at":"2012-05-30T20:51:43Z","version":"1.0.99","agent_logs":[{"agent_id":1,"created_at":"2012-05-30T20:59:01Z","id":1,"log_id":2,"updated_at":"2012-05-30T20:59:01Z","log":{"created_at":"2012-05-30T20:56:20Z","id":2,"log_type_id":null,"name":"apache","organization_id":1,"path":"/var/log/apache/access.log","updated_at":"2012-05-30T20:56:33Z"}}]}
