full loop for upgrading, downloading new version and symlinking

--- a/config/localhost_errplane.conf
+++ b/config/localhost_errplane.conf
@@ -3,3 +3,5 @@ api-key: ignored
 config-host: http://app.dev
 api-host: http://api.dev
 auto-upgrade: false
+agent_path: /tmp/errplane
+agent_bin: /tmp/local-agent-errplane
