--- a/config/prod_errplane.conf
+++ b/config/prod_errplane.conf
@@ -3,3 +3,5 @@ api-key: ignored
 config-host: http://app.errplane.com
 api-host: http://api.errplane.com
 auto-upgrade: false
+agent_path: /tmp/errplane/
+agent_bin: /tmp/errplane-local-agent
