--- a/packages/deb_pkg/errplane/etc/errplane.conf
+++ b/packages/deb_pkg/errplane/etc/errplane.conf
@@ -1,1 +1,7 @@
-#TODO err plane conf
+[DEFAULT]
+api-key: ignored
+config-host: http://app.errplane.com
+api-host: http://api.errplane.com
+auto-upgrade: true
+agent_path: /usr/local/errplane/
+agent_bin: /usr/local/bin/errplane-local-agent
