got pid files going

--- a/config/prod_errplane.conf
+++ b/config/prod_errplane.conf
@@ -5,3 +5,5 @@ api-host: http://api.errplane.com
 auto-upgrade: false
 agent_path: /tmp/errplane/
 agent_bin: /tmp/errplane-local-agent
+pid_file: /tmp/errplane.pid
+test: adf
