--- a/packages/deb_pkg/errplane/etc/errplane.conf
+++ b/packages/deb_pkg/errplane/etc/errplane.conf
@@ -5,3 +5,4 @@ api-host: http://api.errplane.com
 auto-upgrade: true
 agent_path: /usr/local/errplane/
 agent_bin: /usr/local/bin/errplane-local-agent
+pid_file: /var/run/errplane/errplane.pid
