pid files version numbers

--- a/config/prod_errplane.conf
+++ b/config/prod_errplane.conf
@@ -1,8 +1,8 @@
 [DEFAULT]
-api-key: ignored
-config-host: http://app.errplane.com
-api-host: http://api.errplane.com
-auto-upgrade: false
+api_key: ignored
+config_host: http://app.errplane.com
+api_host: http://api.errplane.com
+auto_upgrade: true
 agent_path: /tmp/errplane/
 agent_bin: /tmp/errplane-local-agent
 pid_file: /tmp/errplane.pid
