--- a/packages/deb_pkg/errplane/etc/errplane.conf
+++ b/packages/deb_pkg/errplane/etc/errplane.conf
@@ -1,8 +1,8 @@
 [DEFAULT]
-api-key: ignored
-config-host: http://app.errplane.com
-api-host: http://api.errplane.com
-auto-upgrade: true
+api_key: ignored
+config_host: http://app.errplane.com
+api_host: http://api.errplane.com
+auto_upgrade: true
 agent_path: /usr/local/errplane/
 agent_bin: /usr/local/bin/errplane-local-agent
 pid_file: /var/run/errplane/errplane.pid
