--- a/config/dev_errplane.conf
+++ b/config/dev_errplane.conf
@@ -3,3 +3,7 @@ config-host: http://app.dev.errplane.com
 api-host: http://api.dev.errplane.com
 api-key: ignored
 auto-upgrade: false
+agent_path: /tmp/errplane/
+agent_bin: /tmp/errplane-local-agent
+pid_file: /tmp/errplane.pid
+test: adf
