got initial pushing of disk usage stats, and refactored code to submodules

--- a/config/localhost_errplane.conf
+++ b/config/localhost_errplane.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
-api-key: ignored
-config-host: http://app.dev
-api-host: http://api.dev
+api_key: ignored
+config_host: http://localhost:3000
+api_host: http://localhost:8086
 auto-upgrade: false
 agent_path: /tmp/errplane
 agent_bin: /tmp/local-agent-errplane
