removing references to errplane

--- a/config/localhost_ranger.conf
+++ b/config/localhost_ranger.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
-api_key: ignored
+api_key: test_key
 config_host: http://localhost:3000
 api_host: http://localhost:8086
 auto-upgrade: false
-agent_path: /tmp/errplane
-agent_bin: /tmp/local-agent-errplane
+agent_path: /tmp/ranger
+agent_bin: /tmp/local-agent-ranger
