--- a/config/prod_ranger.conf
+++ b/config/prod_ranger.conf
@@ -3,6 +3,7 @@ api_key: test_key
 config_host: http://app.ranger.com
 api_host: http://api.ranger.com
 auto_upgrade: true
-agent_path: /usr/local/ranger/
-agent_bin: /usr/local/bin/ranger-local-agent
-pid_file: /var/run/ranger/ranger.pid
+agent_path: /tmp/ranger/
+agent_bin: /tmp/ranger-local-agent
+pid_file: /tmp/ranger.pid
+test: adf
