--- a/config/prod_ranger2.conf
+++ b/config/prod_ranger2.conf
@@ -1,9 +1,9 @@
-
 [DEFAULT]
+api_key: test_key
 config_host: http://app.ranger.com
 api_host: http://api.ranger.com
 auto_upgrade: false
 agent_path: /tmp/ranger/
 agent_bin: /tmp/ranger-local-agent
 pid_file: /tmp/ranger.pid
-
+test: adf
